build/k8s/order-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: app
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          imagePullPolicy: Always
          image: soundsofanarchy/otus-microservices-architect:v2.1.0-order-service-arm
          ports:
            - containerPort: 9000
